Được tạo bằng Colab

--- a/Simulation.ipynb
+++ b/Simulation.ipynb
@@ -11,13 +11,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PngivNuusS-U",
-        "outputId": "f22afe26-4c2c-4d6d-dda7-c6821245c059"
+        "id": "PngivNuusS-U"
       },
       "outputs": [],
       "source": [
@@ -26,8 +22,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "u85ybnO3E9bF",
+        "outputId": "12058a6e-e7c2-4f80-ae38-1fed71a19f1e"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -55,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,11 +118,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TYeJ_oka9tsl",
         "outputId": "29a85cb4-2cb3-4201-aed1-c1e489eaa253"
@@ -192,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -640,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -894,7 +892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -920,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1123,7 +1121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1454,7 +1452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1722,7 +1720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1947,7 +1945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2669,7 +2667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "BvC6bcG6c0fg"
       },
@@ -2894,7 +2892,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "HXMF7lLCeD4h"
       },
@@ -3046,7 +3044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "BXACzeoWihoZ"
       },
@@ -3192,7 +3190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "dGkZkk23mJi4"
       },
@@ -3356,7 +3354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "Wy5xzAFjjcoI"
       },
@@ -3492,7 +3490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3536,7 +3534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3798,7 +3796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3988,7 +3986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "1i4oP0-nBd-O"
       },
@@ -4213,7 +4211,7 @@
         "      # Kết thúc\n",
         "      best_ind = tools.selBest(pop, 1)[0]\n",
         "      revenue = best_ind[0] * r_levels[0] + best_ind[1] * r_levels[1] + best_ind[2] * r_levels[2] + best_ind[3] * r_levels[3] + best_ind[4] * r_levels[4]\n",
-        "      \n",
+        "\n",
         "      comp_cost = sum(\n",
         "          max(p_levels[i] * best_ind[i] - S_levels[i], 0) * c_levels[i]\n",
         "          for i in range(N_FARE)\n",
@@ -4244,7 +4242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "6uC34rm8RDlj"
       },
@@ -4554,63 +4552,7 @@
         "                    current_profit = test_profit\n",
         "                    improved = True\n",
         "\n",
-        "    return current_solution\n",
-        "\n",
-        "def solve_with_cvxpy(ticket_prices, compensation_costs, capacities, capacities_by_fare, show_up_probs, T_max):\n",
-        "    \"\"\"Fallback method using CVXPY if no feasible solution is found with Lagrangian relaxation\"\"\"\n",
-        "    # Define decision variables\n",
-        "    variables = {}\n",
-        "    # Tickets to sell for each fare level\n",
-        "    for fare in ['E1', 'E2', 'S1', 'S2', 'B1']:\n",
-        "        variables[fare] = cp.Variable(integer=True, name=f\"x_{fare}\")\n",
-        "\n",
-        "    # Total tickets by class\n",
-        "    variables['E'] = cp.Variable(integer=True, name=\"x_E\")\n",
-        "    variables['S'] = cp.Variable(integer=True, name=\"x_S\")\n",
-        "    variables['B'] = cp.Variable(integer=True, name=\"x_B\")\n",
-        "\n",
-        "    # Calculate expected revenue\n",
-        "    revenue = sum(ticket_prices[fare] * variables[fare] for fare in ['E1', 'E2', 'S1', 'S2', 'B1'])\n",
-        "\n",
-        "    # Calculate expected overbooked passengers for each fare level\n",
-        "    overbooked = {\n",
-        "        fare: cp.pos(show_up_probs[fare] * variables[fare] - capacities_by_fare[fare])\n",
-        "        for fare in ['E1', 'E2', 'S1', 'S2', 'B1']\n",
-        "    }\n",
-        "\n",
-        "    # Calculate compensation costs\n",
-        "    compensation = sum(overbooked[fare] * compensation_costs[fare]\n",
-        "                    for fare in ['E1', 'E2', 'S1', 'S2', 'B1'])\n",
-        "\n",
-        "    # Calculate profit\n",
-        "    profit = revenue - compensation\n",
-        "\n",
-        "    # Define constraints\n",
-        "    constraints = [\n",
-        "        # Fare level sums\n",
-        "        variables['E1'] + variables['E2'] == variables['E'],\n",
-        "        variables['S1'] + variables['S2'] == variables['S'],\n",
-        "        variables['B1'] == variables['B'],\n",
-        "\n",
-        "        # Total tickets limit\n",
-        "        sum(variables[fare] for fare in ['E1', 'E2', 'S1', 'S2', 'B1']) <= T_max,\n",
-        "\n",
-        "        # Minimum capacity constraints\n",
-        "        *[variables[fare] >= capacities_by_fare[fare] for fare in ['E1', 'E2', 'S1', 'S2', 'B1']],\n",
-        "\n",
-        "        # Non-negativity constraints\n",
-        "        *[variables[fare] >= 0 for fare in ['E1', 'E2', 'S1', 'S2', 'B1']]\n",
-        "    ]\n",
-        "\n",
-        "    # Define and solve the problem\n",
-        "    problem = cp.Problem(cp.Maximize(profit), constraints)\n",
-        "    problem.solve(solver=cp.GLPK_MI)\n",
-        "\n",
-        "    # Extract solution\n",
-        "    solution = {fare: int(variables[fare].value) for fare in ['E1', 'E2', 'S1', 'S2', 'B1']}\n",
-        "    profit_value = profit.value\n",
-        "\n",
-        "    return solution, profit_value"
+        "    return current_solution\n"
       ]
     },
     {
@@ -4624,7 +4566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "LmKHAMoFVR3Z"
       },
@@ -4886,7 +4828,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "onIVN2xOLhgr"
       },
@@ -5192,15 +5134,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "fvMvTiXtE9bb"
+      },
       "source": [
         "## Weghted Sum"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "b5J2UzTiE9bc"
+      },
       "outputs": [],
       "source": [
         "def weighted_sum_method(input_params):\n",
@@ -5403,7 +5349,7 @@
         "      print(f\"  Doanh thu f(x) = {f_final:,.0f} VND\")\n",
         "      print(f\"  Bồi thường g(x) = {g_final:,.0f} VND\")\n",
         "      print(f\"  Lợi nhuận (f-g) = {f_final - g_final:,.0f} VND\")\n",
-        "      \n",
+        "\n",
         "      # ('E','1'), ('E','2'),('S','1'), ('S','2'), ('B','1')\n",
         "      return {\n",
         "        \"x_E1\": x_sol[('E','1')],\n",
@@ -5439,7 +5385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "mAPRtRKa2_wg"
       },
@@ -5608,7 +5554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "1QMCcXG84tQw"
       },
@@ -5766,7 +5712,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "FUbhHf4m5NxZ"
       },
@@ -5941,7 +5887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "HnaU272Y5wmJ"
       },
@@ -6073,7 +6019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8147,7 +8093,7 @@
         "    # 'la_san_1': la_san_1,\n",
         "    'ga': {\n",
         "        'func': solve_use_ga,\n",
-        "        'args': {}, \n",
+        "        'args': {},\n",
         "        },\n",
         "    'mi_glpk': {\n",
         "        'func': solve_use_MI,\n",
@@ -8194,7 +8140,7 @@
         "    print(f'Run for input: {input}')\n",
         "    for method_name, method  in list_methods.items():\n",
         "        print(f'Run for method: {method_name}')\n",
-        "        \n",
+        "\n",
         "        import time\n",
         "        start_time = time.time()\n",
         "        solve_result = method['func'](input, **method['args'])\n",
@@ -8207,8 +8153,8 @@
         "        result_entry = input | solve_result\n",
         "        result_entry['input_id'] = input_idx  # Add an identifier for the input\n",
         "        all_results.append(result_entry)\n",
-        "        \n",
-        "    \n",
+        "\n",
+        "\n",
         "\n",
         "# Create DataFrame from all results\n",
         "results_df = pd.DataFrame(all_results)\n",
